[package]
name = "convertir_png_a_ico"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"

[profile.release]
lto = "fat"              # Optimización máxima en tiempo de enlace
codegen-units = 1        # Máxima optimización global
# panic = "abort"          # Minimiza el tamaño y mejora la velocidad
opt-level = "z"          # Prioriza reducir el tamaño del binario
strip = true             # Elimina información innecesaria en el binario